[package]
name = "total-llvm-sys"
version = "0.1.0"
edition = "2024"
build = "build/main.rs"

[dependencies]
llvm-sys-19 = { package = "llvm-sys", version = "191.0", default-features = false, features = ["no-llvm-linking", "disable-alltargets-init", "strict-versioning"], optional = true }
llvm-sys-20 = { package = "llvm-sys", version = "201.0", default-features = false, features = ["no-llvm-linking", "disable-alltargets-init", "strict-versioning"], optional = true }
llvm-sys-21 = { package = "llvm-sys", version = "211.0", default-features = false, features = ["no-llvm-linking", "disable-alltargets-init", "strict-versioning"], optional = true }
llvm-sys-22 = { package = "llvm-sys", version = "221.0", default-features = false, features = ["no-llvm-linking", "disable-alltargets-init", "strict-versioning"], optional = true }

[build-dependencies]
reqwest = { version = "0.13", features = ["blocking"] }
zip = "8.5"

[features]
default = ["llvm-22"]
llvm-19 = ["llvm-sys-19"]
llvm-20 = ["llvm-sys-20"]
llvm-21 = ["llvm-sys-21"]
llvm-22 = ["llvm-sys-22"]
