[package]
name = "total-llvm-sys"
version = "0.1.0"
edition = "2024"
build="build/main.rs"

[dependencies]
llvm-sys-19 = { package = "llvm-sys", version = "191.0.0", default-features = false, features = ["no-llvm-linking", "disable-alltargets-init", "strict-versioning"], optional = true }

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
zip = "4.3"

[features]
default = ["llvm-19"]
llvm-19 = ["llvm-sys-19"]
