[package]
name = "llvm-downloader"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"

[dependencies]
anyhow = { version = "1.0" }
directories = { version = "6.0" }
enable-ansi-support = { version = "0.3" }
indicatif = { version = "0.18", features = ["futures"] }
clap = { version = "4.6", features = ["derive", "string"] }
futures-util = { version = "0.3" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["stream"] }
zip = { version = "8.5" }
